<resources>
    <string name="app_name">Smart Tracking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="time">Time</string>

    <string name="menu_home">Home</string>
    <string name="overview_of_scope_scheduling">Overview of Scope Scheduling</string>
    <string name="overview">Overview</string>
    <string name="no_scope">No Scope</string>
    <string name="scope_a">Scope A</string>
    <string name="scope_b">Scope B</string>
    <string name="scope_c">Scope C</string>
    <string name="scope_d">Scope D</string>
    <string name="add_scope">Add Scope</string>
    <string name="scope_img" translatable="false">Scope Image</string>
    <string name="prev_btn" translatable="false">Previous button</string>
    <string name="next_btn" translatable="false">Next button</string>
    <string name="retrieve_scope_failed">Retrieve scope failed!</string>
    <string name="schedule_at">Scheduled at %s</string>

    <string name="add">Add</string>
    <string name="scope_created_successfully">Scope created successfully!</string>
    <string name="scope_created_failed">Scope created failed!</string>
    <string name="select_time">Select Time</string>


    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>