<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_overview_scope">

    <fragment
        android:id="@+id/nav_overview_scope"
        android:name="com.mobileappt20.ui.overview.OverviewScopeFragment"
        android:label="@string/overview"
        tools:layout="@layout/fragment_overview_scope" >
        <action
            android:id="@+id/action_homeFragment_to_addScopeFragment"
            app:destination="@id/nav_add_scope" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_scope"
        android:name="com.mobileappt20.ui.add.AddScopeFragment"
        android:label="@string/add_scope"
        tools:layout="@layout/fragment_add_scope"/>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mobileappt20.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>