<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/nav_header_vertical_spacing"
    android:background="@drawable/light_purple_bg">

    <ImageView
        android:id="@+id/scopeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/scope_img"
        android:contentDescription="@string/scope_img" />

    <TextView
        android:id="@+id/scopeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/scopeImage"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:textColor="@color/white"
        android:maxLines="2"
        android:maxEms="12"
        android:text="@string/no_scope"
        tools:text="Scope A"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/scopeDatetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scopeTitle"
        android:layout_alignStart="@+id/scopeTitle"
        android:textColor="@color/white"
        android:textSize="@dimen/small_font"
        android:layout_toStartOf="@+id/prevBtn"
        tools:text="Scheduled at 6/1/2023 10am " />

    <ImageButton
        android:id="@+id/prevBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@color/transparent"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/scopeImage"
        android:visibility="gone"
        android:src="@mipmap/arrow_up"
        android:contentDescription="@string/prev_btn" />

    <ImageButton
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@color/transparent"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/scopeImage"
        android:visibility="gone"
        android:src="@mipmap/arrow_up"
        android:rotation="180"
        android:contentDescription="@string/next_btn" />
</RelativeLayout>